cmake_minimum_required(VERSION 3.5)

project(gprof_test LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg")
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pg")
SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -pg")

set(SOURCES src/main.cpp)

add_executable(${PROJECT_NAME} ${SOURCES})

install(TARGETS gprof_test
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
